# sample-aws

./: .gitignore  pyproject.toml
.github/workflows/: aws_publish.yaml
sample_aws/: handler.py  lambda_function.py
