[tool.poetry]
name = "sample-aws"
version = "0.1.0"
description = ""
authors = ["Karl Robeck Alferez <karlalferezfx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mangum = "^0.17.0"
starlette = "^0.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
